--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -32,8 +32,13 @@ nav {
         cursor: pointer;
 }
 
+.hero-container {
+       background-color: rgb(65, 6, 65);
+       width: 100%;
+}
+
+
 .hero {
-   background-color: rgb(65, 6, 65);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -67,6 +72,7 @@ nav {
 }
 
 .services {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,6 +101,7 @@ nav {
 }
 
 .about {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -110,6 +117,7 @@ nav {
 }
 
 footer {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
