--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,9 +1,9 @@
+
 body, html {
-    padding: 0;
     margin: 0;
+    padding: 0;
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 
 nav {
     background-color: white;
@@ -33,12 +33,14 @@ nav {
 }
 
 .hero-container {
-       background-color: rgb(65, 6, 65);
-       width: 100%;
+    display: flex;
+    width: 100%;
 }
 
 
 .hero {
+    flex: 1;
+     background-color: rgb(65, 6, 65);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -72,7 +74,6 @@ nav {
 }
 
 .services {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -101,7 +102,6 @@ nav {
 }
 
 .about {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,7 +117,6 @@ nav {
 }
 
 footer {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,4 +140,27 @@ footer {
 
 .copyright {
     margin-top: 30px;
+}
+
+@media (max-width: 900px) {
+   .services-info {
+    display: flex;
+    flex-direction: column;
+}
+.hero-image img {
+    width: 150px;
+    height: 150px;
+}
+.intro h1 {
+    font-size: 30px;
+}
+
+.intro p {
+    font-size: 10px;
+}
+
+.hero {
+     padding: 70px 50px;
+     padding-bottom: 20px;
+}
 }
