--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -213,7 +213,7 @@ footer {
 @media (max-width: 900px) {
 
   .nav-links { display: none; }
-  .nav-menu { visibility: visible; }
+  .nav-menu { visibility: visible; display: block; }
 
   .hero {
     flex-direction: column;
