--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -8,6 +8,7 @@ html, body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
+    overflow-x: hidden; 
 }
 
 /* Fade in animation when page loads */
@@ -121,12 +122,13 @@ nav {
   width: 400px;
   height: 400px;
   margin-top: 50px;
-  object-fit: cover;
+  object-fit: contain;
   clip-path: polygon(
     25% 6.7%, 75% 6.7%,
     100% 50%, 75% 93.3%,
     25% 93.3%, 0% 50%
   );
+
   animation: float 4s ease-in-out infinite, slideRight 0.7s ease-in-out;
 }
 
